<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true" >

    <Button
        android:id="@+id/playLevelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/play_a_level" />

    <TextView
        android:id="@+id/TitleScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playLevelButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/falling_ball"
        android:textSize="40dp" />

    <Button
        android:id="@+id/playInfiniteLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playLevelButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/play_infinite_level" />

</RelativeLayout>